Revert "fix: prevent horizontal scrolling bug on resize"
This reverts commit b281f07a57a1fec122846da0db78ae538fa61e4c.

--- a/assets/src/js/admin/reports/app/style.scss
+++ b/assets/src/js/admin/reports/app/style.scss
@@ -1,9 +1,3 @@
-#reports-app {
-	position: relative;
-	width: 100%;
-	overflow-x: hidden;
-}
-
 .givewp-inline-period-selector {
 	position: absolute;
 	top: 0;
